# krummstab

./: .gitignore  README.md  adam-script.py  config.py  pyproject.toml  sample-exercise-config.json  sample-random-config.json  sample-static-config.json  setup.py  sheet_directory.py  utils.py
.github/workflows/: python-package.yml
krummstab/: __init__.py  config.py  errors.py  parsers.py  sheet_info.py  sheets.py  strings.py  students.py  submission_info.py  submissions.py  summaries.py  summarize.py  teams.py  utils.py
krummstab/commands/: __init__.py  check.py  collect.py  combine.py  correct.py  init.py  mark.py  send.py  summarize.py
krummstab/schemas/: config-individual-schema.json  config-schema.json  config-shared-schema.json  submission-info-schema.json
logo/: Makefile  banner.tex  logo.tex  social-media-preview.tex  stab.tex
scripts/: xlsx-to-config.sh
tests/: config-individual.json  config-shared-exercise.json  config-shared-random.json  config-shared-static.json  conftest.py  test_all.py
tests/Sample Sheet/: Sample Sheet.xlsx
tests/manual_summarize_test/: config-individual.json  config-shared.json
tests/points-files-exercise/: points_tamara_sample_sheet_2_individual.json  points_terence_sample_sheet_2_individual.json
tests/points-files-static/: points_tamara_sample_sheet_2_individual.json  points_tamara_sample_sheet_individual.json  points_tatiana_sample_sheet_individual.json  points_terence_sample_sheet_2_individual.json  points_terence_sample_sheet_individual.json
(+3 files in other folders)
