[project]
name = "krummstab"
version = "1.2.1"
description = "Efficiently give feedback on ADAM submissions at University of Basel"
readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "Remo Christen", email = "remo.christen@unibas.ch"}
]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    "jsonschema==4.23.0",
    "openpyxl==3.1.5",
    "pypdf==3.1.0",
]

[project.scripts]
krummstab = "krummstab:main"

[project.urls]
Homepage = "https://github.com/aibasel-teaching/krummstab"

[build-system]
requires = ["uv_build >= 0.10.2, <0.11.0"]
build-backend = "uv_build"

[dependency-groups]
release = []
dev = [
    "pytest==7.4.4",
    "ruff==0.15.1",
]

[tool.uv]
package = true
default-groups = ["release"]

[tool.uv.build-backend]
module-root = ""
module-name = "krummstab"

[tool.uv.workspace]
members = [
    "help",
]

[tool.ruff]
line-length = 80

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
